# polars-fastembed

./: .aiignore  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Justfile  README.md  benchmark_both.sh  benchmark_both_embed.sh  benchmark_both_embed_and_retrieve.sh  benchmark_embed.sh  benchmark_embed_and_retrieve.sh  demo.py  pyproject.toml
.github/workflows/: CI.yml  build-ort-providers.yml  test-platform.yml  test-workflow.yml  test.yml
.just/: bench.just  ship.just
.just/ci/: architectures.just  ort-providers.just  versions.just
benchmark/: README.md  benchmark_timings.sh  compare_models.sh  doc_half_match_demo.py  pyproject.toml  timings.csv  timings_asc.csv
benchmark/src/benchmark/: __init__.py  dataset.py  intrinsic_dim.py
original/: embed_demo.py
original/src/polars_fastembed/: __init__.py
polars-fastembed/: Cargo.toml  pyproject.toml
polars-fastembed-cpu/: README.md  pyproject.toml
polars-fastembed-cpu/tests/: provider_test.py
polars-fastembed-cuda/: README.md  pyproject.toml
polars-fastembed-cuda/tests/: provider_test.py
polars-fastembed-tensorrt/: README.md  pyproject.toml
polars-fastembed/python/polars_fastembed/: __init__.py  _ort_loader.py
polars-fastembed/src/: expressions.rs  registry.rs  s3.rs
polars-fastembed/tests/: s3_test.py
rewrite/: Cargo.toml  build.rs  demo.py  embed_demo.py  out.txt  pyproject.toml
rewrite/docs/: SPECIAL_ARCHITECTURES.md
rewrite/python/polars_fastembed/: __init__.py  utils.py
rewrite/src/: expressions.rs  lib.rs  ort_helpers.rs  registry.rs
rewrite/tests/: distance_test.py
rewrite/tests/fixtures/: reference_embeddings.json
scripts/: arm-gnueabihf-toolchain.cmake  armv7-linux-gnueabihf-toolchain.cmake  build_onnx_libs.py  create_onnx_placeholders.py  download_onnx_libs.py  i686-toolchain.cmake  ppc64le-linux-gnu-toolchain.cmake  s390x-linux-gnu-toolchain.cmake
scripts/cuda-patches/: gather_block_quantized.cu
src/polars_fastembed/: __init__.py
test-scripts/: generate_reference_embeddings.py
