[package]
name = "polars_fastembed"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.23.4", features = ["extension-module", "abi3-py38"] }
polars = { version = "0.46.0", default-features = false }
pyo3-polars = { version = "0.20.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
fastembed = "4"

[lib]
name = "_polars_fastembed"
crate-type = ["cdylib"]
path = "src/lib.rs"
